Cutting overflowing text of article previews on Home Page SOLVED

--- a/my_newsapp/static/my_newsapp/home_style.css
+++ b/my_newsapp/static/my_newsapp/home_style.css
@@ -91,7 +91,7 @@ h3 a:hover, p a:hover  {
   word-wrap: break-word;
   overflow: hidden;
   /* max-height: 3.6em; */
-  line-height: 1.2em;
+  /* line-height: 1.2em; */
   
 }
 
@@ -116,29 +116,18 @@ h3 a:hover, p a:hover  {
   text-decoration: none;
 }
 
-/* Efekt fade-outa teksta na homepage-u za artikle primarne kategorije */
-.fade-out {
-  position: relative;
-  max-height: 350px;  /* change the height */
-}
-
-/* Efekt fade-outa teksta na homepage-u za artikle primarne kategorije */
-.fade-out:after {
-  content: '';
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background-image: linear-gradient( rgba(255, 255, 255, 0) 90%, rgba(255, 255, 255, 1) 100% );
-}
-
 .eliminate-overflow {
   /* width: 300px;
   height: 200px; */
-  display: flex;
-  flex-flow: column wrap;
+  /* display: flex; */
+  /* flex-flow: column wrap; */
   overflow: hidden;
+}
+
+.bottom-div{
+  position:absolute;                  /* added */
+  bottom:0;                           /* added */
+  left:0;                           /* added */
 }
 
 /* Bootstrap override */
